<?xml version="1.0"?>
<package format="2">
  <name>steve_teleop</name>
  <version>0.0.0</version>
  <description>The steve_teleop package</description>

  <maintainer email="jeremie.bourque@usherbrooke.ca">jeremie</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
