<?xml version="1.0"?>
<package format="2">
  <name>zeus_teleop</name>
  <version>0.0.0</version>
  <description>The zeus_teleop package</description>

  <maintainer email="jeremie.bourque@usherbrooke.ca">jeremie</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>

</package>
